force-app/main/default/objects/Job_Posting__c/fields/No_of_Interview_Rounds__c.field-meta.xml
<CustomField>
    <fullName>No_of_Interview_Rounds__c</fullName>
    <label>No of Interview Rounds</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>