force-app/main/default/objects/Job_Posting__c/fields/No_of_positions_filled__c.field-meta.xml
<CustomField>
    <fullName>No_of_positions_filled__c</fullName>
    <label>No of positions filled</label>
    <summaryFilterItems>
        <field>Application__c.Status__c</field>
        <operation>equals</operation>
        <value>Hired</value>
    </summaryFilterItems>
    <summaryForeignKey>Application__c.Job_Posting__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>