force-app/main/default/objects/Job_Posting__c/fields/No_of_positions_remaining__c.field-meta.xml
<CustomField>
    <fullName>No_of_positions_remaining__c</fullName>
    <formula>Total_No_of_positions__c  -  No_of_positions_filled__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No of positions remaining</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>