force-app/main/default/objects/Job_Posting__c/fields/Position__c.field-meta.xml
<CustomField>
    <fullName>Position__c</fullName>
    <label>Position</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Software Engineer</fullName>
            </value>
            <value>
                <fullName>Senior Software Engineer</fullName>
            </value>
            <value>
                <fullName>Technical Analyst</fullName>
            </value>
            <value>
                <fullName>Consultant</fullName>
            </value>
            <value>
                <fullName>Architect</fullName>
            </value>
            <value>
                <fullName>Senior Consultant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>