force-app/main/default/objects/Job_Posting__c/fields/Skill_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Skill_Requirements__c</fullName>
    <label>Skill Requirements</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Java</fullName>
            </value>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>AWS</fullName>
            </value>
            <value>
                <fullName>Javascript</fullName>
            </value>
            <value>
                <fullName>Python</fullName>
            </value>
            <value>
                <fullName>Html</fullName>
            </value>
            <value>
                <fullName>Android</fullName>
            </value>
            <value>
                <fullName>iOS</fullName>
            </value>
            <value>
                <fullName>ReactJS</fullName>
            </value>
            <value>
                <fullName>AngularJS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>