force-app/main/default/objects/Job_Posting__c/fields/Target_Hire_Date__c.field-meta.xml
<CustomField>
    <fullName>Target_Hire_Date__c</fullName>
    <label>Target Hire Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>