force-app/main/default/objects/Job_Posting__c/fields/Total_No_of_positions__c.field-meta.xml
<CustomField>
    <fullName>Total_No_of_positions__c</fullName>
    <label>Total No of positions</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>