force-app/main/default/objects/Job_Posting__c/validationRules/target_hire_date.validationRule-meta.xml
<ValidationRule>
    <fullName>target_hire_date</fullName>
    <active>true</active>
    <errorConditionFormula>Target_Hire_Date__c  &lt;  DATEVALUE( NOW() )</errorConditionFormula>
    <errorMessage>The target hire date should be in the future</errorMessage>
</ValidationRule>